Daten werden erfasst

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">SaveMyWaypoints</string>
-    <string name="title_activity_maps">XXX</string>
+    <string name="title_activity_maps">SaveMyWaypoints</string>
 </resources>
