--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SaveMyWaypoints</string>
     <string name="title_activity_maps">SaveMyWaypoints</string>
+    <string name="tabel_wps_list">wps_list</string>
+
 </resources>
