Thema File Export

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">SaveMyWaypoints</string>
     <string name="title_activity_maps">SaveMyWaypoints</string>
-    <string name="tabel_wps_list">wps_list</string>
-
+    <string name="table_wps_list">wps_list</string>
+    <string name="error_happened">Es ging etwas schief :-(</string>
+    <string name="trip_book_share">trip_book_share</string>
 </resources>
