WP Liste jetzt horizontal, altes MapFragment Layout wieder eingebaut

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="title_activity_maps">SaveMyWaypoints</string>
     <string name="table_wps_list">wps_list</string>
     <string name="error_happened">Es ging etwas schief :-(</string>
-    <string name="trip_book_share">trip_book_share</string>
+    <string name="save_waypoints">SaveMyWaypoints</string>
 </resources>
