--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
 
     <string name="title_activity_version">VersionActivity</string>
     <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_smwp">SaveMyWaypoints</string>
+    <string name="title_version">1.0</string>
 </resources>
